--- a/test/expected/lines.fill.html
+++ b/test/expected/lines.fill.html
@@ -21,46 +21,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
     Plotly.newPlot(
         'id-1',
         [{"showlegend":false,
-"mode":"markers",
-"marker":{"size":6,
-"showscale":false},
+"mode":"lines",
 "y":[0,1,4,9,16,25,36,49,64,81,100],
 "type":"scatter",
-"legendgroup":"Points",
-"x":[0,10,20,30,40,50,60,70,80,90,100]}],
+"fill":"tozeroy",
+"x":[0,10,20,30,40,50,60,70,80,90,100]},
+{"showlegend":false,
+"mode":"lines",
+"y":[50,0],
+"type":"scatter",
+"fill":"tozeroy",
+"x":[0,90]}],
         {"showlegend":false,
 "xaxis":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
 "zeroline":true,
 "range":[-1.0,101.0]},
-"shapes":[{"line":{"color":null,
-"dash":"dot"},
-"x0":0,
-"type":"line",
-"y0":25.0,
-"y1":25.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":null},
-"x0":0,
-"type":"line",
-"y0":50.0,
-"y1":50.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":"dash"},
-"x0":0,
-"type":"line",
-"y0":75.0,
-"y1":75.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1}],
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
