--- a/test/expected/lines.fractions.percent.html
+++ b/test/expected/lines.fractions.percent.html
@@ -21,46 +21,27 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
     Plotly.newPlot(
         'id-1',
         [{"showlegend":false,
-"mode":"markers",
-"marker":{"size":6,
-"showscale":false},
-"y":[0,1,4,9,16,25,36,49,64,81,100],
+"mode":"lines",
+"y":[0.0,100.0,400.0,900.0,1600.0,2500.0,3600.0,4900.0,6400.0,8100.0,10000.0],
 "type":"scatter",
-"legendgroup":"Points",
-"x":[0,10,20,30,40,50,60,70,80,90,100]}],
+"groupnorm":"percent",
+"fill":"none",
+"stackgroup":"stacked",
+"x":[0.0,10.0,20.0,30.0,40.0,50.0,60.0,70.0,80.0,90.0,100.0]},
+{"showlegend":false,
+"mode":"lines",
+"y":[5000.0,4444.4443,3888.889,3333.3333,2777.7778,2222.2222,1666.6666,1111.1111,555.55554,0.0,0.0,0.0],
+"type":"scatter",
+"groupnorm":"percent",
+"fill":"none",
+"stackgroup":"stacked",
+"x":[0.0,10.0,20.0,30.0,40.0,50.0,60.0,70.0,80.0,90.0,90.0,90.0,100.0]}],
         {"showlegend":false,
 "xaxis":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
 "zeroline":true,
 "range":[-1.0,101.0]},
-"shapes":[{"line":{"color":null,
-"dash":"dot"},
-"x0":0,
-"type":"line",
-"y0":25.0,
-"y1":25.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":null},
-"x0":0,
-"type":"line",
-"y0":50.0,
-"y1":50.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":"dash"},
-"x0":0,
-"type":"line",
-"y0":75.0,
-"y1":75.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1}],
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
@@ -69,7 +50,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":true,
 "zeroline":true,
-"range":[-1.0,101.0]},
+"range":[-1.0,101.0],
+"ticksuffix":"<sub>%</sub>"},
 "margin":{"l":50,
 "b":50,
 "r":50,
