--- a/test/expected/lines.values.html
+++ b/test/expected/lines.values.html
@@ -21,46 +21,25 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
     Plotly.newPlot(
         'id-1',
         [{"showlegend":false,
-"mode":"markers",
-"marker":{"size":6,
-"showscale":false},
-"y":[0,1,4,9,16,25,36,49,64,81,100],
+"mode":"lines",
+"y":[0.0,1.0,4.0,9.0,16.0,25.0,36.0,49.0,64.0,81.0,100.0],
 "type":"scatter",
-"legendgroup":"Points",
-"x":[0,10,20,30,40,50,60,70,80,90,100]}],
+"fill":"none",
+"stackgroup":"stacked",
+"x":[0.0,10.0,20.0,30.0,40.0,50.0,60.0,70.0,80.0,90.0,100.0]},
+{"showlegend":false,
+"mode":"lines",
+"y":[50.0,44.444443,38.88889,33.333332,27.777779,22.222221,16.666666,11.111111,5.5555553,0.0,0.0,0.0],
+"type":"scatter",
+"fill":"none",
+"stackgroup":"stacked",
+"x":[0.0,10.0,20.0,30.0,40.0,50.0,60.0,70.0,80.0,90.0,90.0,90.0,100.0]}],
         {"showlegend":false,
 "xaxis":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
 "zeroline":true,
 "range":[-1.0,101.0]},
-"shapes":[{"line":{"color":null,
-"dash":"dot"},
-"x0":0,
-"type":"line",
-"y0":25.0,
-"y1":25.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":null},
-"x0":0,
-"type":"line",
-"y0":50.0,
-"y1":50.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1},
-{"line":{"color":null,
-"dash":"dash"},
-"x0":0,
-"type":"line",
-"y0":75.0,
-"y1":75.0,
-"yref":"y",
-"xref":"x domain",
-"x1":1}],
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
