Add points density and priorities.

--- a/test/expected/points.edges.categorical.priorities.html
+++ b/test/expected/points.edges.categorical.priorities.html
@@ -30,53 +30,45 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "x":[0,10,20,30,40,50,60,70,80,90,100]},
 {"showlegend":false,
 "mode":"lines",
-"line":{"color":1,
+"line":{"color":"red",
 "width":2},
-"coloraxis":"coloraxis3",
-"y":[0,36],
+"y":[16,100],
 "type":"scatter",
 "legendgroup":"Edges",
-"x":[0,60]},
+"x":[40,100]},
 {"showlegend":false,
 "mode":"lines",
-"line":{"color":2,
+"line":{"color":"green",
 "width":2},
-"coloraxis":"coloraxis3",
-"y":[1,49],
-"type":"scatter",
-"legendgroup":"Edges",
-"x":[10,70]},
-{"showlegend":false,
-"mode":"lines",
-"line":{"color":3,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[4,64],
-"type":"scatter",
-"legendgroup":"Edges",
-"x":[20,80]},
-{"showlegend":false,
-"mode":"lines",
-"line":{"color":4,
-"width":2},
-"coloraxis":"coloraxis3",
 "y":[9,81],
 "type":"scatter",
 "legendgroup":"Edges",
 "x":[30,90]},
 {"showlegend":false,
 "mode":"lines",
-"line":{"color":5,
+"line":{"color":"blue",
 "width":2},
-"coloraxis":"coloraxis3",
-"y":[16,100],
+"y":[4,64],
 "type":"scatter",
 "legendgroup":"Edges",
-"x":[40,100]}],
+"x":[20,80]},
+{"showlegend":false,
+"mode":"lines",
+"line":{"color":"green",
+"width":2},
+"y":[1,49],
+"type":"scatter",
+"legendgroup":"Edges",
+"x":[10,70]},
+{"showlegend":false,
+"mode":"lines",
+"line":{"color":"red",
+"width":2},
+"y":[0,36],
+"type":"scatter",
+"legendgroup":"Edges",
+"x":[0,60]}],
         {"showlegend":false,
-"coloraxis2":{"cmin":0.96,
-"cmax":5.04,
-"showscale":false},
 "xaxis":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
