--- a/test/expected/points.offsets.one-colors.html
+++ b/test/expected/points.offsets.one-colors.html
@@ -69,7 +69,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showlegend":false,
 "mode":"markers",
 "marker":{"color":[0,1,2,3,4,5,6,7,8,9,10],
-"coloraxis":"coloraxis2",
+"coloraxis":"coloraxis",
 "size":6,
 "showscale":true},
 "y":[0,1,4,9,16,25,36,49,64,81,100],
@@ -92,7 +92,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"red",
 "width":2},
-"coloraxis":"coloraxis3",
 "x":[0,60],
 "y":[0,36],
 "type":"scatter",
@@ -103,7 +102,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"green",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[1,49],
 "type":"scatter",
 "name":"Bar-E",
@@ -113,7 +111,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"blue",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[4,64],
 "type":"scatter",
 "name":"Baz-E",
@@ -123,7 +120,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"green",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[9,81],
 "type":"scatter",
 "name":"Bar-E",
@@ -133,14 +129,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"red",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[16,100],
 "type":"scatter",
 "name":"Foo-E",
 "legendgroup":"Edges Foo-E",
 "x":[40,100]}],
         {"showlegend":true,
-"coloraxis2":{"colorbar":{"title":{"text":"Points"},
+"coloraxis":{"colorbar":{"title":{"text":"Points"},
 "x":1.2},
 "cmin":-0.1,
 "colorscale":[[0.0,
