--- a/test/expected/points.offsets.two-colors.html
+++ b/test/expected/points.offsets.two-colors.html
@@ -24,7 +24,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showlegend":false,
 "mode":"markers",
 "marker":{"color":[0,1,2,3,4,5,6,7,8,9,10],
-"coloraxis":"coloraxis",
+"coloraxis":"coloraxis2",
 "size":12,
 "showscale":true},
 "y":[0,1,4,9,16,25,36,49,64,81,100],
@@ -47,7 +47,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showlegend":false,
 "mode":"markers",
 "marker":{"color":[0,1,2,3,4,5,6,7,8,9,10],
-"coloraxis":"coloraxis2",
+"coloraxis":"coloraxis",
 "size":6,
 "showscale":true},
 "y":[0,1,4,9,16,25,36,49,64,81,100],
@@ -70,7 +70,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"red",
 "width":2},
-"coloraxis":"coloraxis3",
 "x":[0,60],
 "y":[0,36],
 "type":"scatter",
@@ -81,7 +80,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"green",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[1,49],
 "type":"scatter",
 "name":"Bar-E",
@@ -91,7 +89,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"blue",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[4,64],
 "type":"scatter",
 "name":"Baz-E",
@@ -101,7 +98,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"green",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[9,81],
 "type":"scatter",
 "name":"Bar-E",
@@ -111,20 +107,19 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "line":{"color":"red",
 "width":2},
-"coloraxis":"coloraxis3",
 "y":[16,100],
 "type":"scatter",
 "name":"Foo-E",
 "legendgroup":"Edges Foo-E",
 "x":[40,100]}],
         {"showlegend":true,
-"coloraxis2":{"colorbar":{"title":{"text":"Points"},
-"x":1.2},
+"coloraxis2":{"colorbar":{"title":{"text":"Borders"},
+"x":1.4},
 "cmin":-0.1,
 "colorscale":[[0.0,
-"red"],
+"blue"],
 [1.0,
-"blue"]],
+"green"]],
 "cmax":10.1,
 "showscale":true},
 "xaxis":{"showgrid":true,
@@ -133,13 +128,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "zeroline":true,
 "title":"X Axis",
 "range":[-1.0,101.0]},
-"coloraxis":{"colorbar":{"title":{"text":"Borders"},
-"x":1.4},
+"coloraxis":{"colorbar":{"title":{"text":"Points"},
+"x":1.2},
 "cmin":-0.1,
 "colorscale":[[0.0,
-"blue"],
+"red"],
 [1.0,
-"green"]],
+"blue"]],
 "cmax":10.1,
 "showscale":true},
 "paper_bgcolor":"white",
