--- a/test/expected/points.points.categorical.priorities.html
+++ b/test/expected/points.points.categorical.priorities.html
@@ -22,61 +22,49 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         'id-1',
         [{"showlegend":false,
 "mode":"markers",
-"marker":{"size":6,
+"marker":{"color":"blue",
+"size":6,
 "showscale":false},
-"y":[0,1,4,9,16,25,36,49,64,81,100],
+"y":[100,36,4],
 "type":"scatter",
-"legendgroup":"Points",
-"x":[0,10,20,30,40,50,60,70,80,90,100]},
-{"showlegend":true,
-"mode":"lines",
-"line":{"color":1,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[0,36],
+"name":"Baz",
+"text":["Color: Baz<br>X: 100<br>Y: 100",
+"Color: Baz<br>X: 60<br>Y: 36",
+"Color: Baz<br>X: 20<br>Y: 4"],
+"legendgroup":"Points Baz",
+"hovertemplate":"%{text}<extra></extra>",
+"x":[100,60,20]},
+{"showlegend":false,
+"mode":"markers",
+"marker":{"color":"green",
+"size":6,
+"showscale":false},
+"y":[81,49,25,9,1],
 "type":"scatter",
-"legendgroup":"Edges",
-"x":[0,60]},
-{"showlegend":true,
-"mode":"lines",
-"line":{"color":2,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[1,49],
+"name":"Bar",
+"text":["Color: Bar<br>X: 90<br>Y: 81",
+"Color: Bar<br>X: 70<br>Y: 49",
+"Color: Bar<br>X: 50<br>Y: 25",
+"Color: Bar<br>X: 30<br>Y: 9",
+"Color: Bar<br>X: 10<br>Y: 1"],
+"legendgroup":"Points Bar",
+"hovertemplate":"%{text}<extra></extra>",
+"x":[90,70,50,30,10]},
+{"showlegend":false,
+"mode":"markers",
+"marker":{"color":"red",
+"size":6,
+"showscale":false},
+"y":[64,16,0],
 "type":"scatter",
-"legendgroup":"Edges",
-"x":[10,70]},
-{"showlegend":true,
-"mode":"lines",
-"line":{"color":3,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[4,64],
-"type":"scatter",
-"legendgroup":"Edges",
-"x":[20,80]},
-{"showlegend":true,
-"mode":"lines",
-"line":{"color":4,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[9,81],
-"type":"scatter",
-"legendgroup":"Edges",
-"x":[30,90]},
-{"showlegend":true,
-"mode":"lines",
-"line":{"color":5,
-"width":2},
-"coloraxis":"coloraxis3",
-"y":[16,100],
-"type":"scatter",
-"legendgroup":"Edges",
-"x":[40,100]}],
+"name":"Foo",
+"text":["Color: Foo<br>X: 80<br>Y: 64",
+"Color: Foo<br>X: 40<br>Y: 16",
+"Color: Foo<br>X: 0<br>Y: 0"],
+"legendgroup":"Points Foo",
+"hovertemplate":"%{text}<extra></extra>",
+"x":[80,40,0]}],
         {"showlegend":false,
-"coloraxis2":{"cmin":0.96,
-"cmax":5.04,
-"showscale":true},
 "xaxis":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
