--- a/test/expected/points.continuous.named.html
+++ b/test/expected/points.continuous.named.html
@@ -23,7 +23,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         [{"showlegend":false,
 "mode":"markers",
 "marker":{"color":[0,1,2,3,4,5,6,7,8,9,10],
-"coloraxis":"coloraxis2",
+"coloraxis":"coloraxis",
 "size":6,
 "showscale":false},
 "y":[0,1,4,9,16,25,36,49,64,81,100],
@@ -43,7 +43,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "hovertemplate":"%{text}<extra></extra>",
 "x":[0,10,20,30,40,50,60,70,80,90,100]}],
         {"showlegend":false,
-"coloraxis2":{"cmin":-0.1,
+"coloraxis":{"cmin":-0.1,
 "colorscale":[[0.0,
 "#440154"],
 [0.0625,
