Show dendogram graphs.

--- a/test/expected/heatmap.annotations.legend.html
+++ b/test/expected/heatmap.annotations.legend.html
@@ -94,8 +94,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "coloraxis2":{"colorbar":{"title":{"text":"score"},
 "x":1.4},
 "showscale":true},
-"xaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
@@ -113,16 +112,14 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "bargap":0,
 "legend":{"tracegroupgap":0,
 "itemdoubleclick":false},
-"yaxis2":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3],
 "domain":[0.055,1.0],
 "ticktext":["X",
 "Y",
 "Z"]},
-"yaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
@@ -130,8 +127,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis99":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.0,0.001]},
-"xaxis2":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
 "domain":[0.055,1.0],
