--- a/test/expected/heatmap.hclust.dendogram.html
+++ b/test/expected/heatmap.hclust.dendogram.html
@@ -24,24 +24,50 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "y":[1,2,3],
 "type":"heatmap",
 "name":"",
-"z":[[8.0,7.0,0.0],
-[9.0,6.0,1.0],
-[10.0,5.0,2.0],
-[11.0,4.0,3.0]],
+"z":[[3.0,4.0,11.0],
+[2.0,5.0,10.0],
+[0.0,7.0,8.0],
+[1.0,6.0,9.0]],
 "transpose":true,
-"x":[1,2,3,4]}],
+"x":[1,2,3,4]},
+{"showlegend":false,
+"mode":"lines",
+"xaxis":"x2",
+"line":{"color":"black"},
+"y":[1.0,1.0,2.0,2.0,null,1.5,1.5,3.0,3.0,null],
+"type":"scatter",
+"name":"",
+"x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
+{"showlegend":false,
+"mode":"lines",
+"line":{"color":"black"},
+"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,1.7320508,null,0.0,1.7320508,1.7320508,1.7320508,null],
+"type":"scatter",
+"name":"",
+"yaxis":"y2",
+"x":[3.0,3.0,4.0,4.0,null,2.0,2.0,3.5,3.5,null,1.0,1.0,2.75,2.75,null]}],
         {"showlegend":false,
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
 "xaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"domain":[0.0,0.8]},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
-"plot_bgcolor":"white",
 "yaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"domain":[0.0,0.8]},
+"yaxis2":{"showgrid":false,
+"showticklabels":false,
+"range":[0.0,null],
+"domain":[0.8,1.0]},
+"xaxis2":{"showgrid":false,
+"showticklabels":false,
+"range":[0.0,null],
+"domain":[0.8,1.0]},
+"plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
 "r":50,
