--- a/test/expected/heatmap.hclust.html
+++ b/test/expected/heatmap.hclust.html
@@ -34,15 +34,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
-"xaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis":{"showgrid":false,
 "showticklabels":false},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "plot_bgcolor":"white",
-"yaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis":{"showgrid":false,
 "showticklabels":false},
 "margin":{"l":50,
 "b":50,
