--- a/test/expected/heatmap.reorder.columns=rows.html
+++ b/test/expected/heatmap.reorder.columns=rows.html
@@ -33,15 +33,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "coloraxis":{"cmin":-0.1,
 "cmax":10.1,
 "showscale":false},
-"xaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis":{"showgrid":false,
 "showticklabels":false},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "plot_bgcolor":"white",
-"yaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis":{"showgrid":false,
 "showticklabels":false},
 "margin":{"l":50,
 "b":50,
