--- a/test/expected/heatmap.reorder.slanted.both.html
+++ b/test/expected/heatmap.reorder.slanted.both.html
@@ -58,8 +58,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "x":[1.0,1.0,1.0]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
-"xaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
@@ -71,18 +70,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "bargap":0,
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
-"yaxis2":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis2":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.055,1.0]},
-"yaxis":{"showgrid":true,
-"gridcolor":"lightgrey",
+"yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
 "title":"is"},
-"xaxis2":{"showgrid":true,
-"gridcolor":"lightgrey",
+"xaxis2":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.055,1.0]},
 "plot_bgcolor":"white",
