Allow gaps in heatmaps.

--- a/test/expected/heatmap.annotations.dendogram.html
+++ b/test/expected/heatmap.annotations.dendogram.html
@@ -45,8 +45,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "3",
 "4"]},
 {"showlegend":false,
-"marker":{"color":["darkgray",
-"black",
+"marker":{"color":["black",
+"darkgray",
 "lightgray"]},
 "y":["1",
 "2",
@@ -55,7 +55,25 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "name":"is",
 "yaxis":"y2",
 "orientation":"h",
-"x":[1.0,1.0,1.0]}],
+"x":[1.0,1.0,1.0]},
+{"showlegend":false,
+"mode":"lines",
+"xaxis":"x3",
+"line":{"color":"black"},
+"y":[1.0,1.0,2.0,2.0,null,1.5,1.5,3.0,3.0,null],
+"type":"scatter",
+"name":"",
+"yaxis":"y2",
+"x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
+{"showlegend":false,
+"mode":"lines",
+"xaxis":"x2",
+"line":{"color":"black"},
+"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,4.8989797,4.8989797,1.7320508,null],
+"type":"scatter",
+"name":"",
+"yaxis":"y3",
+"x":[1.0,1.0,2.0,2.0,null,3.0,3.0,4.0,4.0,null,1.5,1.5,3.5,3.5,null]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
 "xaxis":{"showgrid":false,
@@ -70,17 +88,25 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "bargap":0,
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
+"yaxis3":{"showgrid":false,
+"showticklabels":false,
+"range":[0.0,null],
+"domain":[0.8,1.0]},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
-"domain":[0.055,1.0]},
+"domain":[0.055,0.7999999999999999]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
 "title":"is"},
+"xaxis3":{"showgrid":false,
+"showticklabels":false,
+"range":[0.0,null],
+"domain":[0.8,1.0]},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
-"domain":[0.055,1.0]},
+"domain":[0.055,0.7999999999999999]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
