--- a/test/expected/heatmap.dendogram.gaps.html
+++ b/test/expected/heatmap.dendogram.gaps.html
@@ -21,66 +21,70 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
     Plotly.newPlot(
         'id-1',
         [{"coloraxis":"coloraxis",
-"xaxis":"x2",
-"y":[1,2,3],
+"y":[1,2,3,4,5,6],
 "type":"heatmap",
 "name":"",
-"yaxis":"y2",
-"z":[[0.0,7.0,8.0],
-[1.0,6.0,9.0],
-[2.0,5.0,10.0],
-[3.0,4.0,11.0]],
+"z":[[1.0,null,null,6.0,null,9.0],
+[0.0,null,null,7.0,null,8.0],
+[null,null,null,null,null,null],
+[null,null,null,null,null,null],
+[3.0,null,null,4.0,null,11.0],
+[null,null,null,null,null,null],
+[2.0,null,null,5.0,null,10.0]],
 "transpose":true,
-"x":[1,2,3,4]},
+"x":[1,2,3,4,5,6,7]},
 {"showlegend":false,
-"marker":{"color":[1.0,0.5,0.0,1.0],
-"coloraxis":"coloraxis2"},
+"mode":"lines",
 "xaxis":"x2",
-"y":[1.0,1.0,1.0,1.0],
-"type":"bar",
-"name":"score",
-"orientation":"v",
-"x":["1",
-"2",
-"3",
-"4"]},
+"line":{"color":"black"},
+"y":[1.0,1.0,4.0,4.0,null,2.5,2.5,6.0,6.0,null],
+"type":"scatter",
+"name":"",
+"x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
 {"showlegend":false,
-"marker":{"color":["darkgray",
-"black",
-"lightgray"]},
-"y":["1",
-"2",
-"3"],
-"type":"bar",
-"name":"is",
+"mode":"lines",
+"line":{"color":"black"},
+"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,1.7320508,null,0.0,1.7320508,1.7320508,1.7320508,null],
+"type":"scatter",
+"name":"",
 "yaxis":"y2",
-"orientation":"h",
-"x":[1.0,1.0,1.0]}],
+"x":[5.0,5.0,7.0,7.0,null,2.0,2.0,6.0,6.0,null,1.0,1.0,4.0,4.0,null]}],
         {"showlegend":false,
-"coloraxis2":{"showscale":false},
-"xaxis":{"showgrid":false,
-"showticklabels":false,
-"range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
+"xaxis":{"showgrid":false,
+"showticklabels":true,
+"tickvals":[1,2,3,4,5,6,7],
+"domain":[0.0,0.8],
+"ticktext":["D",
+"C",
+"",
+"",
+"A",
+"",
+"B"]},
 "paper_bgcolor":"white",
-"bargap":0,
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
+"yaxis":{"showgrid":false,
+"showticklabels":true,
+"tickvals":[1,2,3,4,5,6],
+"domain":[0.0,0.8],
+"ticktext":["X",
+"",
+"",
+"Y",
+"",
+"Z"]},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
-"domain":[0.055,1.0]},
-"yaxis":{"showgrid":false,
-"showticklabels":false,
-"range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"range":[0.0,null],
+"domain":[0.8,1.0]},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
-"domain":[0.055,1.0]},
+"range":[0.0,null],
+"domain":[0.8,1.0]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
