--- a/test/expected/heatmap.annotations.gaps.html
+++ b/test/expected/heatmap.annotations.gaps.html
@@ -22,40 +22,52 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         'id-1',
         [{"coloraxis":"coloraxis",
 "xaxis":"x2",
-"y":[1,2,3],
+"y":[1,2,3,4,5,6],
 "type":"heatmap",
 "name":"",
 "yaxis":"y2",
-"z":[[0.0,7.0,8.0],
-[1.0,6.0,9.0],
-[2.0,5.0,10.0],
-[3.0,4.0,11.0]],
+"z":[[0.0,null,null,7.0,null,8.0],
+[null,null,null,null,null,null],
+[1.0,null,null,6.0,null,9.0],
+[null,null,null,null,null,null],
+[null,null,null,null,null,null],
+[2.0,null,null,5.0,null,10.0],
+[3.0,null,null,4.0,null,11.0]],
 "transpose":true,
-"x":[1,2,3,4]},
+"x":[1,2,3,4,5,6,7]},
 {"showlegend":false,
-"marker":{"color":[1.0,0.5,0.0,1.0],
+"marker":{"color":[1.0,null,0.5,null,null,0.0,1.0],
 "coloraxis":"coloraxis2"},
 "xaxis":"x2",
-"y":[1.0,1.0,1.0,1.0],
+"y":[1.0,0.0,1.0,0.0,0.0,1.0,1.0],
 "type":"bar",
 "name":"score",
 "orientation":"v",
 "x":["1",
 "2",
 "3",
-"4"]},
+"4",
+"5",
+"6",
+"7"]},
 {"showlegend":false,
-"marker":{"color":["darkgray",
-"black",
+"marker":{"color":["black",
+"white",
+"white",
+"darkgray",
+"white",
 "lightgray"]},
 "y":["1",
 "2",
-"3"],
+"3",
+"4",
+"5",
+"6"],
 "type":"bar",
 "name":"is",
 "yaxis":"y2",
 "orientation":"h",
-"x":[1.0,1.0,1.0]}],
+"x":[1.0,0.0,0.0,1.0,0.0,1.0]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
 "xaxis":{"showgrid":false,
@@ -71,16 +83,31 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
-"showticklabels":false,
-"domain":[0.055,1.0]},
+"showticklabels":true,
+"tickvals":[1,2,3,4,5,6],
+"domain":[0.055,1.0],
+"ticktext":["X",
+"",
+"",
+"Y",
+"",
+"Z"]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
 "title":"is"},
 "xaxis2":{"showgrid":false,
-"showticklabels":false,
-"domain":[0.055,1.0]},
+"showticklabels":true,
+"tickvals":[1,2,3,4,5,6,7],
+"domain":[0.055,1.0],
+"ticktext":["A",
+"",
+"B",
+"",
+"",
+"C",
+"D"]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
