Add option for reordering hclust.

--- a/test/expected/heatmap.annotations.dendogram.html
+++ b/test/expected/heatmap.annotations.dendogram.html
@@ -69,7 +69,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "xaxis":"x2",
 "line":{"color":"black"},
-"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,4.8989797,4.8989797,1.7320508,null],
+"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,6.63103,6.63103,1.7320508,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y3",
