--- a/test/expected/heatmap.reorder.dendogram.html
+++ b/test/expected/heatmap.reorder.dendogram.html
@@ -22,70 +22,58 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         'id-1',
         [{"coloraxis":"coloraxis",
 "xaxis":"x2",
-"y":[1,2,3,4,5,6],
+"y":[1,2,3],
 "type":"heatmap",
 "name":"",
 "yaxis":"y2",
-"z":[[0.0,null,null,7.0,null,8.0],
-[null,null,null,null,null,null],
-[1.0,null,null,6.0,null,9.0],
-[null,null,null,null,null,null],
-[null,null,null,null,null,null],
-[2.0,null,null,5.0,null,10.0],
-[3.0,null,null,4.0,null,11.0]],
+"z":[[0.0,7.0,8.0],
+[1.0,6.0,9.0],
+[2.0,5.0,10.0],
+[3.0,4.0,11.0]],
 "transpose":true,
-"x":[1,2,3,4,5,6,7]},
+"x":[1,2,3,4]},
 {"showlegend":false,
-"marker":{"color":[1.0,null,0.5,null,null,0.0,1.0],
+"marker":{"color":[1.0,0.5,0.0,1.0],
 "coloraxis":"coloraxis2"},
 "xaxis":"x2",
-"y":[1.0,0.0,1.0,0.0,0.0,1.0,1.0],
+"y":[1.0,1.0,1.0,1.0],
 "type":"bar",
 "name":"score",
 "orientation":"v",
 "x":["1",
 "2",
 "3",
-"4",
-"5",
-"6",
-"7"]},
+"4"]},
 {"showlegend":false,
 "marker":{"color":["black",
-"white",
-"white",
-"darkgray",
-"white",
-"lightgray"]},
+"lightgray",
+"darkgray"]},
 "y":["1",
 "2",
-"3",
-"4",
-"5",
-"6"],
+"3"],
 "type":"bar",
 "name":"is",
 "yaxis":"y2",
 "orientation":"h",
-"x":[1.0,0.0,0.0,1.0,0.0,1.0]},
+"x":[1.0,1.0,1.0]},
 {"showlegend":false,
 "mode":"lines",
 "xaxis":"x3",
 "line":{"color":"black"},
-"y":[1.0,1.0,4.0,4.0,null,2.5,2.5,6.0,6.0,null],
+"y":[2.0,2.0,3.0,3.0,null,1.0,1.0,2.5,2.5,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y2",
-"x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
+"x":[0.0,9.165152,9.165152,0.0,null,0.0,23.260067,23.260067,9.165152,null]},
 {"showlegend":false,
 "mode":"lines",
 "xaxis":"x2",
 "line":{"color":"black"},
-"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,6.63103,6.63103,1.7320508,null],
+"y":[0.0,1.7320508,1.7320508,0.0,null,1.7320508,1.7320508,1.7320508,0.0,null,1.7320508,1.7320508,1.7320508,0.0,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y3",
-"x":[1.0,1.0,3.0,3.0,null,6.0,6.0,7.0,7.0,null,2.0,2.0,6.5,6.5,null]}],
+"x":[1.0,1.0,2.0,2.0,null,1.5,1.5,3.0,3.0,null,2.25,2.25,4.0,4.0,null]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
 "xaxis":{"showgrid":false,
@@ -105,15 +93,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "range":[0.0,null],
 "domain":[0.8,1.0]},
 "yaxis2":{"showgrid":false,
-"showticklabels":true,
-"tickvals":[1,2,3,4,5,6],
-"domain":[0.055,0.7999999999999999],
-"ticktext":["X",
-"",
-"",
-"Y",
-"",
-"Z"]},
+"showticklabels":false,
+"domain":[0.055,0.7999999999999999]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
@@ -124,16 +105,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "range":[0.0,null],
 "domain":[0.8,1.0]},
 "xaxis2":{"showgrid":false,
-"showticklabels":true,
-"tickvals":[1,2,3,4,5,6,7],
-"domain":[0.055,0.7999999999999999],
-"ticktext":["A",
-"",
-"B",
-"",
-"",
-"C",
-"D"]},
+"showticklabels":false,
+"domain":[0.055,0.7999999999999999]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
