Change gaps API to use group indices.

--- a/test/expected/heatmap.annotations.dendogram.gaps.html
+++ b/test/expected/heatmap.annotations.dendogram.gaps.html
@@ -22,24 +22,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         'id-1',
         [{"coloraxis":"coloraxis",
 "xaxis":"x2",
-"y":[1,2,3,4,5,6],
+"y":[1,2,3,4],
 "type":"heatmap",
 "name":"",
 "yaxis":"y2",
-"z":[[0.0,null,null,7.0,null,8.0],
-[null,null,null,null,null,null],
-[1.0,null,null,6.0,null,9.0],
-[null,null,null,null,null,null],
-[null,null,null,null,null,null],
-[2.0,null,null,5.0,null,10.0],
-[3.0,null,null,4.0,null,11.0]],
+"z":[[0.0,null,7.0,8.0],
+[1.0,null,6.0,9.0],
+[null,null,null,null],
+[2.0,null,5.0,10.0],
+[null,null,null,null],
+[3.0,null,4.0,11.0]],
 "transpose":true,
-"x":[1,2,3,4,5,6,7]},
+"x":[1,2,3,4,5,6]},
 {"showlegend":false,
-"marker":{"color":[1.0,null,0.5,null,null,0.0,1.0],
+"marker":{"color":[1.0,0.5,null,0.0,null,1.0],
 "coloraxis":"coloraxis2"},
 "xaxis":"x2",
-"y":[1.0,0.0,1.0,0.0,0.0,1.0,1.0],
+"y":[1.0,1.0,0.0,1.0,0.0,1.0],
 "type":"bar",
 "name":"score",
 "orientation":"v",
@@ -48,31 +47,26 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "3",
 "4",
 "5",
-"6",
-"7"]},
+"6"]},
 {"showlegend":false,
 "marker":{"color":["black",
 "white",
-"white",
 "darkgray",
-"white",
 "lightgray"]},
 "y":["1",
 "2",
 "3",
-"4",
-"5",
-"6"],
+"4"],
 "type":"bar",
 "name":"is",
 "yaxis":"y2",
 "orientation":"h",
-"x":[1.0,0.0,0.0,1.0,0.0,1.0]},
+"x":[1.0,0.0,1.0,1.0]},
 {"showlegend":false,
 "mode":"lines",
 "xaxis":"x3",
 "line":{"color":"black"},
-"y":[1.0,1.0,4.0,4.0,null,2.5,2.5,6.0,6.0,null],
+"y":[1.0,1.0,3.0,3.0,null,2.0,2.0,4.0,4.0,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y2",
@@ -85,7 +79,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "type":"scatter",
 "name":"",
 "yaxis":"y3",
-"x":[1.0,1.0,3.0,3.0,null,6.0,6.0,7.0,7.0,null,2.0,2.0,6.5,6.5,null]}],
+"x":[1.0,1.0,2.0,2.0,null,4.0,4.0,6.0,6.0,null,1.5,1.5,5.0,5.0,null]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
 "xaxis":{"showgrid":false,
@@ -106,13 +100,11 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "domain":[0.8,1.0]},
 "yaxis2":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6],
+"tickvals":[1,2,3,4],
 "domain":[0.055,0.7999999999999999],
 "ticktext":["X",
 "",
-"",
 "Y",
-"",
 "Z"]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
@@ -125,14 +117,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "domain":[0.8,1.0]},
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6,7],
+"tickvals":[1,2,3,4,5,6],
 "domain":[0.055,0.7999999999999999],
 "ticktext":["A",
-"",
 "B",
 "",
-"",
 "C",
+"",
 "D"]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
