--- a/test/expected/heatmap.dendogram.gaps.html
+++ b/test/expected/heatmap.dendogram.gaps.html
@@ -21,23 +21,22 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
     Plotly.newPlot(
         'id-1',
         [{"coloraxis":"coloraxis",
-"y":[1,2,3,4,5,6],
+"y":[1,2,3,4],
 "type":"heatmap",
 "name":"",
-"z":[[1.0,null,null,6.0,null,9.0],
-[0.0,null,null,7.0,null,8.0],
-[null,null,null,null,null,null],
-[null,null,null,null,null,null],
-[3.0,null,null,4.0,null,11.0],
-[null,null,null,null,null,null],
-[2.0,null,null,5.0,null,10.0]],
+"z":[[1.0,null,6.0,9.0],
+[null,null,null,null],
+[0.0,null,7.0,8.0],
+[null,null,null,null],
+[3.0,null,4.0,11.0],
+[2.0,null,5.0,10.0]],
 "transpose":true,
-"x":[1,2,3,4,5,6,7]},
+"x":[1,2,3,4,5,6]},
 {"showlegend":false,
 "mode":"lines",
 "xaxis":"x2",
 "line":{"color":"black"},
-"y":[1.0,1.0,4.0,4.0,null,2.5,2.5,6.0,6.0,null],
+"y":[1.0,1.0,3.0,3.0,null,2.0,2.0,4.0,4.0,null],
 "type":"scatter",
 "name":"",
 "x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
@@ -48,34 +47,31 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "type":"scatter",
 "name":"",
 "yaxis":"y2",
-"x":[5.0,5.0,7.0,7.0,null,2.0,2.0,6.0,6.0,null,1.0,1.0,4.0,4.0,null]}],
+"x":[5.0,5.0,6.0,6.0,null,3.0,3.0,5.5,5.5,null,1.0,1.0,4.25,4.25,null]}],
         {"showlegend":false,
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
 "xaxis":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6,7],
+"tickvals":[1,2,3,4,5,6],
 "domain":[0.0,0.8],
 "ticktext":["D",
+"",
 "C",
 "",
-"",
 "A",
-"",
 "B"]},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "yaxis":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6],
+"tickvals":[1,2,3,4],
 "domain":[0.0,0.8],
 "ticktext":["X",
 "",
-"",
 "Y",
-"",
 "Z"]},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
