--- a/test/expected/heatmap.annotations.gaps.html
+++ b/test/expected/heatmap.annotations.gaps.html
@@ -22,24 +22,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
         'id-1',
         [{"coloraxis":"coloraxis",
 "xaxis":"x2",
-"y":[1,2,3,4,5,6],
+"y":[1,2,3,4],
 "type":"heatmap",
 "name":"",
 "yaxis":"y2",
-"z":[[0.0,null,null,7.0,null,8.0],
-[null,null,null,null,null,null],
-[1.0,null,null,6.0,null,9.0],
-[null,null,null,null,null,null],
-[null,null,null,null,null,null],
-[2.0,null,null,5.0,null,10.0],
-[3.0,null,null,4.0,null,11.0]],
+"z":[[0.0,null,7.0,8.0],
+[1.0,null,6.0,9.0],
+[null,null,null,null],
+[2.0,null,5.0,10.0],
+[null,null,null,null],
+[3.0,null,4.0,11.0]],
 "transpose":true,
-"x":[1,2,3,4,5,6,7]},
+"x":[1,2,3,4,5,6]},
 {"showlegend":false,
-"marker":{"color":[1.0,null,0.5,null,null,0.0,1.0],
+"marker":{"color":[1.0,0.5,null,0.0,null,1.0],
 "coloraxis":"coloraxis2"},
 "xaxis":"x2",
-"y":[1.0,0.0,1.0,0.0,0.0,1.0,1.0],
+"y":[1.0,1.0,0.0,1.0,0.0,1.0],
 "type":"bar",
 "name":"score",
 "orientation":"v",
@@ -48,26 +47,21 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "3",
 "4",
 "5",
-"6",
-"7"]},
+"6"]},
 {"showlegend":false,
 "marker":{"color":["black",
 "white",
-"white",
 "darkgray",
-"white",
 "lightgray"]},
 "y":["1",
 "2",
 "3",
-"4",
-"5",
-"6"],
+"4"],
 "type":"bar",
 "name":"is",
 "yaxis":"y2",
 "orientation":"h",
-"x":[1.0,0.0,0.0,1.0,0.0,1.0]}],
+"x":[1.0,0.0,1.0,1.0]}],
         {"showlegend":false,
 "coloraxis2":{"showscale":false},
 "xaxis":{"showgrid":false,
@@ -84,13 +78,11 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6],
+"tickvals":[1,2,3,4],
 "domain":[0.055,1.0],
 "ticktext":["X",
 "",
-"",
 "Y",
-"",
 "Z"]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
@@ -99,14 +91,13 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "title":"is"},
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
-"tickvals":[1,2,3,4,5,6,7],
+"tickvals":[1,2,3,4,5,6],
 "domain":[0.055,1.0],
 "ticktext":["A",
-"",
 "B",
 "",
-"",
 "C",
+"",
 "D"]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
