Switch to ehclust instead of oclust.

--- a/test/expected/heatmap.annotations.dendogram.gaps.html
+++ b/test/expected/heatmap.annotations.dendogram.gaps.html
@@ -66,16 +66,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "mode":"lines",
 "xaxis":"x3",
 "line":{"color":"black"},
-"y":[1.0,1.0,3.0,3.0,null,2.0,2.0,4.0,4.0,null],
+"y":[3.0,3.0,4.0,4.0,null,1.0,1.0,3.5,3.5,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y2",
-"x":[0.0,9.165152,9.165152,0.0,null,9.165152,14.094916,14.094916,0.0,null]},
+"x":[0.0,9.165152,9.165152,0.0,null,0.0,14.094916,14.094916,9.165152,null]},
 {"showlegend":false,
 "mode":"lines",
 "xaxis":"x2",
 "line":{"color":"black"},
-"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,6.63103,6.63103,1.7320508,null],
+"y":[0.0,1.7320508,1.7320508,0.0,null,0.0,1.7320508,1.7320508,0.0,null,1.7320508,4.8989797,4.8989797,1.7320508,null],
 "type":"scatter",
 "name":"",
 "yaxis":"y3",
