Rework axis and domain computations to fix obvious bugs.

--- a/test/expected/heatmap.annotations.dendogram.gaps.html
+++ b/test/expected/heatmap.annotations.dendogram.gaps.html
@@ -86,7 +86,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -101,6 +101,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "domain":[0.055,0.7999999999999999],
 "ticktext":["X",
 "",
@@ -110,7 +111,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis3":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,null],
@@ -118,6 +119,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4,5,6],
+"range":[0.5,6.5],
 "domain":[0.055,0.7999999999999999],
 "ticktext":["A",
 "B",
