--- a/test/expected/heatmap.annotations.legend.html
+++ b/test/expected/heatmap.annotations.legend.html
@@ -98,7 +98,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"colorbar":{"title":{"text":"values"},
 "x":1.2},
 "cmin":-0.11,
@@ -115,6 +115,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3],
+"range":[0.5,3.5],
 "domain":[0.055,1.0],
 "ticktext":["X",
 "Y",
@@ -123,13 +124,14 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis99":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.0,0.001]},
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "domain":[0.055,1.0],
 "ticktext":["A",
 "B",
