--- a/test/expected/heatmap.dendogram.gaps.html
+++ b/test/expected/heatmap.dendogram.gaps.html
@@ -55,6 +55,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4,5,6],
+"range":[0.5,6.5],
 "domain":[0.0,0.8],
 "ticktext":["D",
 "",
@@ -68,6 +69,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "domain":[0.0,0.8],
 "ticktext":["X",
 "",
