--- a/test/expected/heatmap.hclust.dendogram.html
+++ b/test/expected/heatmap.hclust.dendogram.html
@@ -52,12 +52,14 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showscale":false},
 "xaxis":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,4.5],
 "domain":[0.0,0.8]},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.0,0.8]},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
