--- a/test/expected/heatmap.reorder.slanted.columns.same.html
+++ b/test/expected/heatmap.reorder.slanted.columns.same.html
@@ -60,7 +60,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.1,
 "cmax":10.1,
 "showscale":false},
@@ -70,14 +70,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
