--- a/test/expected/heatmap.annotations.gaps.html
+++ b/test/expected/heatmap.annotations.gaps.html
@@ -68,7 +68,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -79,6 +79,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "domain":[0.055,1.0],
 "ticktext":["X",
 "",
@@ -88,10 +89,11 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4,5,6],
+"range":[0.5,6.5],
 "domain":[0.055,1.0],
 "ticktext":["A",
 "B",
