--- a/test/expected/heatmap.annotations.html
+++ b/test/expected/heatmap.annotations.html
@@ -62,7 +62,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -72,14 +72,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,4.5],
 "domain":[0.055,1.0]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
