--- a/test/expected/heatmap.hclust.html
+++ b/test/expected/heatmap.hclust.html
@@ -35,13 +35,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "cmax":11.11,
 "showscale":false},
 "xaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"range":[0.5,4.5]},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "plot_bgcolor":"white",
 "yaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"range":[0.5,3.5]},
 "margin":{"l":50,
 "b":50,
 "r":50,
