--- a/test/expected/heatmap.hovers.axes.gaps.html
+++ b/test/expected/heatmap.hovers.axes.gaps.html
@@ -63,6 +63,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4,5,6],
+"range":[0.5,6.5],
 "ticktext":["A",
 "B",
 "",
@@ -76,6 +77,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "ticktext":["X",
 "",
 "Y",
