--- a/test/expected/heatmap.hovers.entries.html
+++ b/test/expected/heatmap.hovers.entries.html
@@ -49,6 +49,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4],
+"range":[0.5,4.5],
 "ticktext":["A",
 "B",
 "C",
@@ -60,6 +61,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3],
+"range":[0.5,3.5],
 "ticktext":["X",
 "Y",
 "Z"]},
