--- a/test/expected/heatmap.reorder.dendogram.html
+++ b/test/expected/heatmap.reorder.dendogram.html
@@ -80,7 +80,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -94,18 +94,20 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "domain":[0.8,1.0]},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,0.7999999999999999]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis3":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,null],
 "domain":[0.8,1.0]},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,4.5],
 "domain":[0.055,0.7999999999999999]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
