--- a/test/expected/heatmap.reorder.rows=columns.html
+++ b/test/expected/heatmap.reorder.rows=columns.html
@@ -34,13 +34,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "cmax":10.1,
 "showscale":false},
 "xaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"range":[0.5,3.5]},
 "paper_bgcolor":"white",
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
 "plot_bgcolor":"white",
 "yaxis":{"showgrid":false,
-"showticklabels":false},
+"showticklabels":false,
+"range":[0.5,3.5]},
 "margin":{"l":50,
 "b":50,
 "r":50,
