--- a/test/expected/heatmap.reorder.slanted.both.html
+++ b/test/expected/heatmap.reorder.slanted.both.html
@@ -26,10 +26,10 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "type":"heatmap",
 "name":"",
 "yaxis":"y2",
-"z":[[8.0,0.0,7.0],
-[9.0,1.0,6.0],
-[10.0,2.0,5.0],
-[11.0,3.0,4.0]],
+"z":[[0.0,7.0,8.0],
+[1.0,6.0,9.0],
+[2.0,5.0,10.0],
+[3.0,4.0,11.0]],
 "transpose":true,
 "x":[1,2,3,4]},
 {"showlegend":false,
@@ -46,8 +46,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "4"]},
 {"showlegend":false,
 "marker":{"color":["darkgray",
-"lightgray",
-"black"]},
+"black",
+"lightgray"]},
 "y":["1",
 "2",
 "3"],
@@ -62,7 +62,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -72,14 +72,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,4.5],
 "domain":[0.055,1.0]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
