--- a/test/expected/heatmap.reorder.slanted.rows.same.html
+++ b/test/expected/heatmap.reorder.slanted.rows.same.html
@@ -32,7 +32,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "transpose":true,
 "x":[1,2,3]},
 {"showlegend":false,
-"marker":{"color":[0.5,1.0,0.0],
+"marker":{"color":[1.0,0.5,0.0],
 "coloraxis":"coloraxis2"},
 "xaxis":"x2",
 "y":[1.0,1.0,1.0],
@@ -43,8 +43,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "2",
 "3"]},
 {"showlegend":false,
-"marker":{"color":["darkgray",
-"black",
+"marker":{"color":["black",
+"darkgray",
 "lightgray"]},
 "y":["1",
 "2",
@@ -60,7 +60,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"score"},
+"title":"is"},
 "coloraxis":{"cmin":-0.1,
 "cmax":10.1,
 "showscale":false},
@@ -70,14 +70,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "legend":{"tracegroupgap":0},
 "yaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
 "domain":[0.0,0.05],
-"title":"is"},
+"title":"score"},
 "xaxis2":{"showgrid":false,
 "showticklabels":false,
+"range":[0.5,3.5],
 "domain":[0.055,1.0]},
 "plot_bgcolor":"white",
 "margin":{"l":50,
