Rotate titles of annotations to be readable.

--- a/test/expected/bars.horizontal.categorical.html
+++ b/test/expected/bars.horizontal.categorical.html
@@ -47,13 +47,11 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "paper_bgcolor":"white",
 "bargap":0.02,
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
-"plot_bgcolor":"white",
 "yaxis":{"showgrid":false,
 "showticklabels":false},
 "xaxis2":{"showgrid":true,
@@ -62,6 +60,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "zeroline":true,
 "range":[-1.03,2.03],
 "domain":[0.055,1.0]},
+"annotations":[{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
+"plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
 "r":50,
