--- a/test/expected/series_bars.horizontal.gap.both.html
+++ b/test/expected/series_bars.horizontal.gap.both.html
@@ -106,8 +106,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "paper_bgcolor":"white",
 "bargap":0.02,
 "template":"simple_white",
@@ -130,8 +129,25 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.055,0.10500000000000001],
-"title":"is"},
+"domain":[0.055,0.10500000000000001]},
+"annotations":[{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5},
+{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x2 domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
