--- a/test/expected/series_bars.horizontal.gap.categorical.html
+++ b/test/expected/series_bars.horizontal.gap.categorical.html
@@ -86,8 +86,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "paper_bgcolor":"white",
 "bargap":0.02,
 "template":"simple_white",
@@ -106,6 +105,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "zeroline":true,
 "range":[-0.5,50.5],
 "domain":[0.055,0.5025]},
+"annotations":[{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
