--- a/test/expected/series_bars.horizontal.values.continuous.legend.html
+++ b/test/expected/series_bars.horizontal.values.continuous.legend.html
@@ -80,8 +80,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "paper_bgcolor":"white",
 "bargap":0.02,
 "template":"simple_white",
@@ -96,6 +95,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "zeroline":true,
 "range":[-1.5,151.5],
 "domain":[0.055,1.0]},
+"annotations":[{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
