--- a/test/expected/bars.vertical.both.html
+++ b/test/expected/bars.vertical.both.html
@@ -72,14 +72,28 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "yaxis2":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.055,0.10500000000000001],
-"title":"is"},
+"domain":[0.055,0.10500000000000001]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0},
+{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y2 domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
