--- a/test/expected/bars.vertical.categorical.legend.html
+++ b/test/expected/bars.vertical.categorical.legend.html
@@ -97,11 +97,18 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "xaxis99":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.0,0.001]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
