--- a/test/expected/bars.vertical.continuous.legend.html
+++ b/test/expected/bars.vertical.continuous.legend.html
@@ -59,8 +59,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
