--- a/test/expected/heatmap.annotations.dendogram.html
+++ b/test/expected/heatmap.annotations.dendogram.html
@@ -79,8 +79,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -99,8 +98,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "xaxis3":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,null],
@@ -109,6 +107,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "showticklabels":false,
 "range":[0.5,4.5],
 "domain":[0.055,0.7999999999999999]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0},
+{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
