--- a/test/expected/heatmap.annotations.gaps.html
+++ b/test/expected/heatmap.annotations.gaps.html
@@ -67,8 +67,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "coloraxis":{"cmin":-0.11,
 "cmax":11.11,
 "showscale":false},
@@ -88,8 +87,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "xaxis2":{"showgrid":false,
 "showticklabels":true,
 "tickvals":[1,2,3,4,5,6],
@@ -101,6 +99,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "C",
 "",
 "D"]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0},
+{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
