--- a/test/expected/heatmap.annotations.legend.html
+++ b/test/expected/heatmap.annotations.legend.html
@@ -97,8 +97,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "coloraxis":{"colorbar":{"title":{"text":"values"},
 "x":1.2},
 "cmin":-0.11,
@@ -123,8 +122,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "yaxis":{"showgrid":false,
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "xaxis99":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.0,0.001]},
@@ -137,6 +135,23 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "B",
 "C",
 "D"]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0},
+{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
