--- a/test/expected/series_bars.horizontal.values.categorical.legend.html
+++ b/test/expected/series_bars.horizontal.values.categorical.legend.html
@@ -120,8 +120,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "paper_bgcolor":"white",
 "yaxis99":{"showgrid":false,
 "showticklabels":false,
@@ -142,6 +141,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "zeroline":true,
 "range":[-1.5,151.5],
 "domain":[0.055,1.0]},
+"annotations":[{"yanchor":"top",
+"xanchor":"center",
+"y":0,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"textangle":-90,
+"x":0.5}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
