--- a/test/expected/series_bars.vertical.categorical.html
+++ b/test/expected/series_bars.vertical.categorical.html
@@ -86,7 +86,6 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "bargap":0.02,
 "template":"simple_white",
 "legend":{"tracegroupgap":0},
-"plot_bgcolor":"white",
 "yaxis2":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
@@ -97,8 +96,16 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
+"plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
 "r":50,
