--- a/test/expected/series_bars.vertical.gap.both.html
+++ b/test/expected/series_bars.vertical.gap.both.html
@@ -118,20 +118,34 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"score"},
+"domain":[0.0,0.05]},
 "yaxis2":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.055,0.10500000000000001],
-"title":"is"},
+"domain":[0.055,0.10500000000000001]},
 "yaxis3":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
 "zeroline":true,
 "range":[-0.5,50.5],
 "domain":[0.11,0.53]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"score",
+"xref":"x domain",
+"x":0},
+{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y2 domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
