--- a/test/expected/series_bars.vertical.gap.categorical.legend.html
+++ b/test/expected/series_bars.vertical.gap.categorical.legend.html
@@ -136,8 +136,7 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
 "yaxis3":{"showgrid":true,
 "gridcolor":"lightgrey",
 "showticklabels":true,
@@ -147,6 +146,14 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "xaxis99":{"showgrid":false,
 "showticklabels":false,
 "domain":[0.0,0.001]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
