--- a/test/expected/series_bars.vertical.values.categorical.html
+++ b/test/expected/series_bars.vertical.values.categorical.html
@@ -100,8 +100,15 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "gridcolor":"lightgrey",
 "showticklabels":false,
 "range":[0.0,1.0],
-"domain":[0.0,0.05],
-"title":"is"},
+"domain":[0.0,0.05]},
+"annotations":[{"yanchor":"middle",
+"xanchor":"right",
+"y":0.5,
+"yref":"y domain",
+"showarrow":false,
+"text":"is",
+"xref":"x domain",
+"x":0}],
 "plot_bgcolor":"white",
 "margin":{"l":50,
 "b":50,
