Fix matrix ordering bug, color scale expansion bug.

--- a/test/expected/heatmap.log2.html
+++ b/test/expected/heatmap.log2.html
@@ -31,8 +31,8 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "transpose":true,
 "x":[1,2,3,4]}],
         {"showlegend":false,
-"coloraxis":{"cmin":-0.035849627,
-"cmax":3.6208122,
+"coloraxis":{"cmin":0.0,
+"cmax":3.5849626,
 "showscale":false},
 "xaxis":{"showgrid":false,
 "showticklabels":false,
