Prepare for v1.12; add final order for graph; improve hovers

--- a/test/expected/heatmap.log2.html
+++ b/test/expected/heatmap.log2.html
@@ -24,6 +24,18 @@ window.PlotlyConfig = {MathJaxConfig: 'local'};
 "y":[1,2,3],
 "type":"heatmap",
 "name":"",
+"text":[["Z: 0",
+"Z: 1",
+"Z: 2",
+"Z: 3"],
+["Z: 7",
+"Z: 6",
+"Z: 5",
+"Z: 4"],
+["Z: 8",
+"Z: 9",
+"Z: 10",
+"Z: 11"]],
 "z":[[0.0,3.0,3.169925001442312],
 [1.0,2.807354922057604,3.321928094887362],
 [1.584962500721156,2.584962500721156,3.4594316186372973],
